@@ -38,7 +38,8 @@ int gk_kernel_execution_count = 0;
 
 
 /* Architectural parameters introduced in GPU emulator */
-int gpu_wavefront_size = 3;
+int gpu_wavefront_size = 64;
+int gpu_max_work_group_size = 256;
 
 
 
